--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ authors = ["Tibor Gáts <tibor.gats@gmail.com>"]
 description = "A new approach for making music."
 readme = "README.md"
 keywords = ["keyboard", "music", "note", "pitch"]
-license = "MIT"
+license = "undecided"
 repository = ""
 homepage = ""
 
