change to piston_window

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,9 +13,7 @@ homepage = ""
 [dependencies]
 portaudio = "*"
 lazy_static = "*"
+piston_window = "*"
 piston = "*"
-pistoncore-glutin_window = "*"
-piston2d-graphics = "*"
-piston2d-glium_graphics = "*"
 glium = "*"
 conrod = "*"
