--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,19 +1,26 @@
 [package]
 
 name = "music"
+description = "Scaleless music."
 version = "0.0.2"
 authors = ["Tibor Gáts <tibor.gats@gmail.com>"]
-description = "Scaleless music."
 readme = "README.md"
 keywords = ["music", "sound", "audio"]
 license = "undecided"
-repository = ""
+repository = "https://github.com/tiborgats/music"
 homepage = ""
+documentation = ""
+
+[features]
+default = ["portaudio"]
 
 [dependencies]
-portaudio = "*"
-lazy_static = "*"
-rayon = "*"
+portaudio = { version = "0.6.4", optional = true }
+rsoundio = { version = "0.1.6", optional = true }
+lazy_static = "0.2.1"
+rayon = "0.4.0"
+
+[dev-dependencies]
 piston_window = "*"
 piston = "*"
 glium = "*"
