--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,12 +12,16 @@ homepage = ""
 documentation = ""
 
 [features]
-default = ["portaudio"]
+default = ["be-portaudio"]
+# Optional backends
+be-portaudio = ["portaudio", "lazy_static"]
+be-rsoundio = ["rsoundio", "rb"]
 
 [dependencies]
 portaudio = { version = "0.6.4", optional = true }
+lazy_static = { version = "0.2.1", optional = true }
 rsoundio = { version = "0.1.6", optional = true }
-lazy_static = "0.2.1"
+rb = { version = "0.2.0", optional = true }
 rayon = "0.4.0"
 
 [dev-dependencies]
