--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ portaudio = { version = "0.6.4", optional = true }
 lazy_static = { version = "0.2.1", optional = true }
 rsoundio = { version = "0.1.6", optional = true }
 rb = { version = "0.2.0", optional = true }
-num = "*"
+num = "0.1.32"
 rayon = "0.4.0"
 
 [dev-dependencies]
