--- a/appveyor.yml
+++ b/appveyor.yml
@@ -47,4 +47,5 @@ build: false
 # perform other testing commands. Rust will automatically be placed in the PATH environment
 # variable.
 test_script:
+- cmd: nuget install portaudio -OutputDirectory deps -ExcludeVersion
 - cmd: cargo test --verbose
