dev-dependencies corrected

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,11 @@
 [package]
-
 name = "scaleless_music"
-description = "A library for building music with precise harmonies, without the limitations of musical scales."
+description = "A library for building music with precise harmonies, without the limitations of any musical scale."
 version = "0.0.6"
 authors = ["Tibor Gáts <tibor.gats@gmail.com>"]
 readme = "README.md"
 keywords = ["music", "scaleless", "sound", "audio"]
 license = "WTFPL"
-license-file = "COPYING"
 repository = "https://github.com/tiborgats/scaleless_music"
 documentation = "https://tiborgats.github.io/scaleless_music"
 
@@ -24,7 +22,6 @@ rb = { version = "0.2.0", optional = true }
 num = "0.1.34"
 
 [dev-dependencies]
-piston_window = "*"
-piston = "*"
-glium = "*"
-conrod = "*"
+piston_window = "0.51.1"
+piston = "0.24.0"
+conrod = "0.39.0"
