--- a/appveyor.yml
+++ b/appveyor.yml
@@ -47,5 +47,11 @@ build: false
 # perform other testing commands. Rust will automatically be placed in the PATH environment
 # variable.
 test_script:
+# Installing PortAudio
+#- curl -kLO https://github.com/adfernandes/precompiled-portaudio-windows/raw/master/portaudio-r1891-build.zip
+#- 7z x portaudio-r1891-build.zip
 - cmd: nuget install portaudio -OutputDirectory deps -ExcludeVersion
+- cmd: set PATH=C:/projects/extmodem/deps/portaudio.redist/build/native/bin/x64/v120/Release;%PATH%
+- cmd: set LIB=C:/projects/extmodem/deps/portaudio/build/native/lib/x64/v120/Release;%LIB%
+#- cmd: set PORTAUDIO_ONLY_STATIC
 - cmd: cargo test --verbose
