--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,14 +15,14 @@ environment:
       target: x86_64-pc-windows-msvc
 ### GNU Toolchains ###
   # Stable 64-bit GNU
-    - channel: stable
-      target: x86_64-pc-windows-gnu
+#    - channel: stable
+#      target: x86_64-pc-windows-gnu
   # Beta 64-bit GNU
-    - channel: beta
-      target: x86_64-pc-windows-gnu
+#    - channel: beta
+#      target: x86_64-pc-windows-gnu
   # Nightly 64-bit GNU
-    - channel: nightly
-      target: x86_64-pc-windows-gnu
+#    - channel: nightly
+#      target: x86_64-pc-windows-gnu
 
 matrix:
   allow_failures:
