--- a/appveyor.yml
+++ b/appveyor.yml
@@ -25,6 +25,7 @@ environment:
 #      target: x86_64-pc-windows-gnu
 
 matrix:
+  fast_finish: false
   allow_failures:
     - channel: nightly
     #- channel: beta
