--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,8 +15,6 @@ default = []
 be-portaudio = ["portaudio"]
 be-rsoundio = ["rsoundio", "rb"]
 be-sdl2 = ["sdl2"]
-# Examples use conrod GUI
-examples = ["piston_window", "piston", "conrod"]
 
 [dependencies]
 portaudio = { version = "0.7.0", optional = true }
@@ -25,7 +23,7 @@ rb = { version = "0.2.0", optional = true }
 sdl2 = { version = "0.25.0", optional = true }
 num = "0.1.36"
 
-# [dev-dependencies]
-piston_window = { version = "0.57.0", optional = true }
-piston = { version = "0.26.0", optional = true }
-conrod = { version = "0.46.0", optional = true }
+[dev-dependencies]
+piston_window = "0.57.0"
+piston = "0.26.0"
+conrod = "0.46.0"
