examples are built with portaudio backend

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ before_script:
 script:
 - |
   travis-cargo build &&
-  travis-cargo test &&
+  travis-cargo test --features "be-portaudio" &&
   travis-cargo bench &&
   travis-cargo --only stable doc -- --no-deps --features "be-portaudio"
 after_success:
